--- a/VC_Backoffice/app/config/config.yml
+++ b/VC_Backoffice/app/config/config.yml
@@ -9,6 +9,8 @@ parameters:
     locale: en
 
 framework:
+    csrf_protection:
+        enabled: true
     #esi: ~
     #translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
@@ -33,6 +35,7 @@ framework:
     assets: ~
     php_errors:
         log: true
+    translator: { fallbacks: ["%locale%"] }
 
 # Twig Configuration
 twig:
@@ -68,3 +71,18 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+    from_email:
+        address: velo@connecte.com
+        sender_name: VeloConnecte
+
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        # enable the SonataAdminBundle block
+        sonata.admin.block.admin_list:
+            contexts: [admin]
