--- a/VC_Backoffice/app/config/routing.yml
+++ b/VC_Backoffice/app/config/routing.yml
@@ -29,3 +29,10 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+get_bikes_for_user:
+    path: /admin/app/ride/create/get-bikes-for-user/{userId}
+    defaults: {_controller: AppBundle:RideAdmin:getBikesForUser}
+    options:
+        expose: true
