--- a/VC_Backoffice/app/config/security.yml
+++ b/VC_Backoffice/app/config/security.yml
@@ -17,6 +17,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+                default_target_path: dashboard
             logout:       true
             anonymous:    true
 
